turmites.lessons.turmites.langtoncolors.LangtonColors.scala.error
LangtonsAnt:18: error: ')' expected but '}' found.
  if (ind==0) {setCouleurSol(colors(colors.length-1}
                                                   ^